--- a/VPlanUtils.cabal
+++ b/VPlanUtils.cabal
@@ -16,6 +16,6 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable vplan-cli
-  build-depends:     base, mtl, cmdargs, ansi-terminal, MissingH, split, text, hxt, hxt-tagsoup, hxt-http, has, gtk, poppler, glib, directory, lens, HTTP
+  build-depends:     base, mtl, cmdargs, ansi-terminal, MissingH, split, text, hxt, hxt-tagsoup, hxt-http, has, gtk, poppler, glib, directory, lens, HTTP, filepath, network, pipes, MonadCatchIO-transformers, pipes-safe, errors, safe, transformers, polyparse, time
   main-is: 	     UI/CLI.hs
   hs-source-dirs:    src
