Restructure code; Cleanup; Use more lenses
This is a big restructure. The modifier class has been removed, and
replaced by instances of Contains and Ixed. The Sequential and Parallel
modifiers are no longer needed, as modifiers contain the children
theirselves. The Combining modifier has been renamed to Combine and now
combines multiple modifiers, which it contains as children.
The usage of UndecidableInstances is avoided where possible.

--- a/vplan-utils.cabal
+++ b/vplan-utils.cabal
@@ -51,17 +51,17 @@ library
        , void
        , HTTP
   exposed-modules:
-          Core.Modifier
-        , Core.Schedule
+          Core.Schedule
+        , Core.Builder
         , Core.Resource
         , Core.Error
+        , Core.SimpleSchedule
         , Core.Modifier.Enum
         , Core.Modifier.Copy
         , Core.Modifier.Constant
-        , Core.Modifier.Parallel
-        , Core.Modifier.Sequential
+        , Core.Modifier.Empty
         , Core.Modifier.Limit
-        , Core.Modifier.Combining
+        , Core.Modifier.Combine
         
   hs-source-dirs:    src
   ghc-options: -Wall -Werror -fwarn-tabs
@@ -73,6 +73,7 @@ test-suite vplan-tests
   build-depends:
           base
         , test-framework
+        , transformers
         , test-framework-quickcheck2
         , QuickCheck
         , vplan-utils
