Add more tests; Add more SimpleSchedule functions
This commit brings the following improvements:

  * Copy has been replaced by the Reference modifier, which is simpler
  * Now all modifiers are instance of Eq
  * Additions to SimpleSchedule.hs: reference, swap, move
  * Rename: delete -> empty, create -> single in SimpleSchedule
  * Add more tests

--- a/vplan-utils.cabal
+++ b/vplan-utils.cabal
@@ -57,7 +57,7 @@ library
         , Core.Error
         , Core.SimpleSchedule
         , Core.Modifier.Enum
-        , Core.Modifier.Copy
+        , Core.Modifier.Reference
         , Core.Modifier.Constant
         , Core.Modifier.Empty
         , Core.Modifier.Limit
@@ -80,7 +80,3 @@ test-suite vplan-tests
         , lens
         , checkers
   ghc-options: -Wall
-
-
-
-
