--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: haskell
 before_install:
   - cabal update
+  - cabal install cabal-install
   - travis/update_ghc
 install:
   - cabal install --only-dependencies -j
