Fix travis build
Forgot to add tests the last time when installing deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - cabal --version
   - travis/update_ghc
 install:
-  - ~/.cabal/bin/cabal install --only-dependencies -j
+  - ~/.cabal/bin/cabal install --only-dependencies --enable-tests -j
