--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,5 @@
 language: haskell
+before_install:
+
+  # Try installing some of the build-deps with apt-get for speed.
+  - travis/cabal-apt-install
