Try setting lower bound on TH

--- a/vplan-utils.cabal
+++ b/vplan-utils.cabal
@@ -20,7 +20,7 @@ library
     , dlist
     , numeric-prelude
 --    , semigroupoids
-    , template-haskell
+    , template-haskell >= 2.8.0.0
     , bytestring
     , void
 
