Fix compile errors and use CPP for TH

--- a/vplan-utils.cabal
+++ b/vplan-utils.cabal
@@ -19,8 +19,7 @@ library
     , mtl
     , dlist
     , numeric-prelude
---    , semigroupoids
-    , template-haskell >= 2.8.0.0
+    , template-haskell
     , bytestring
     , void
 
