Set at least some lower bound for lens

--- a/vplan.cabal
+++ b/vplan.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.8
 library
   build-depends:
       base
-    , lens
+    , lens > 3.8
     , mtl
     , dlist
     , template-haskell
