--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: haskell
 before_install:
 
+  # Install boxes (git version)
+   - travis/install-boxes
+
   # Try installing some of the build-deps with apt-get for speed.
-#  - travis/cabal-apt-install
+   - travis/cabal-apt-install
