--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: haskell
+before_install:
+
+  # Install tasty from git, with fixed stm dependency bound and more quickcheck options.
+  - git clone https://github.com/bennofs/tasty && cd tasty && cabal install
+
 install:
 
   # Try installing some of the build-deps with apt-get for speed.
    - travis/cabal-apt-install
-
