[travis-ci] Checkout right branch of tasty

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: haskell
 before_install:
 
   # Install tasty from git, with fixed stm dependency bound and more quickcheck options.
-  - git clone https://github.com/bennofs/tasty && cd tasty/core && cabal install && cd ../quickcheck && cabal install
+  - git clone -b quickcheck-options https://github.com/bennofs/tasty && cd tasty/core && cabal install && cd ../quickcheck && cabal install
   - echo $PWD # Test
 
 install:
