--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - cd $TRAVIS_BUILD_DIR/tasty/core       && cabal install
   - cd $TRAVIS_BUILD_DIR/tasty/quickcheck && cabal install
 
+haskell: 7.6
 install:
 
   # Get to the build directory
