Try exporting flags

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: haskell
 install:
 
+  # Export flags
+  - export CABAL_FLAGS="-j --avoid-reinstalls --enable-tests --constraint \"text installed\" --constraint \"vector installed\" --constraint \"void installed\" --constraint \"contravariant installed\" --constraint \"distributive installed\" --constraint \"comonads installed\" --constraint \"comonads-fd installed\" --constraint \"comonad-transformers installed\""
+
   # Install latest cabal to build in parallel
   - time travis/fast-install-cabal
   
@@ -25,6 +28,4 @@ script:
 
 env:
 
-  - CABAL=~/.cabal/bin/cabal CABAL_FLAGS="-j --avoid-reinstalls --enable-tests --constraint \"text installed\" --constraint \"vector installed\" --constraint \"void installed\" --constraint \"contravariant installed\" --constraint \"distributive installed\" --constraint \"comonads installed\" --constraint \"comonads-fd installed\" --constraint \"comonad-transformers installed\""
-                
-   
+  - CABAL=~/.cabal/bin/cabal
