--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: haskell
 install:
 
-  # Export flags
-  - export CABAL_FLAGS="-j --avoid-reinstalls --enable-tests --constraint \"text installed\" --constraint \"vector installed\" --constraint \"void installed\" --constraint \"contravariant installed\" --constraint \"distributive installed\" --constraint \"comonads installed\" --constraint \"comonads-fd installed\" --constraint \"comonad-transformers installed\""
-
   # Install latest cabal to build in parallel
   - time travis/fast-install-cabal
   
@@ -17,7 +14,7 @@ install:
   - time travis/install-patched
 
   # Install dependencies
-  - time travis_retry $CABAL install --only-dependencies --enable-tests $CABAL_FLAGS
+  - echo $CABAL_FLAGS | time travis_retry xargs $CABAL install --only-dependencies --enable-tests
 
 script: 
 
@@ -29,3 +26,4 @@ script:
 env:
 
   - CABAL=~/.cabal/bin/cabal
+    CABAL_FLAGS="-j --avoid-reinstalls --enable-tests --constraint \"text installed\" --constraint \"vector installed\" --constraint \"void installed\" --constraint \"contravariant installed\" --constraint \"distributive installed\" --constraint \"comonads installed\" --constraint \"comonads-fd installed\" --constraint \"comonad-transformers installed\""
